config update for danger zone case skins and mp5 souvenir skin

--- a/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
@@ -1,91 +1,176 @@
 "Skins"
 {
-	"Night Stripe"
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
+	"Нощно райе"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"Окото на Атина"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
 	}
-	"Snek-9"
+	"Змия-9"
 	{
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"Оцеляващ"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"Гълтач"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"Захранващо ядро"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
 	}
-	"PAW"
+	"ЛАПА"
 	{
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"Движеща сила"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"Войниче играчка"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"Капиляр"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"Кошмар"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Warhawk"
+	"Военен ястреб"
 	{
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"Открито море"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"Код „Червено“"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"Накъсване"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
 	}
-	"Eco"
+	"Еко"
 	{
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"Кехлибарен въздушен поток"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"Неонов ездач"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -174,6 +259,11 @@
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"Целофан"
 	{
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"Дълги светлини"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Нитро"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Стопове"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Проверка на двигателя"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Предпазна мрежа"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Метачка"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Преобразовател"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Поднасяне"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Ръждиво покритие"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Калобран"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Избледняване"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Ръчна спирачка"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Интеграл"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Първокласно вино"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Телешка кожа"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Турбо чифт"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Контролен панел"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Дистанционно управление"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Студен термоядрен синтез"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Ядрена градина"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Ахерон"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Пробив в ядрото"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Обменник"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Дорник"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Охладител"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Преграда"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Дънна платка"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Копроцесор"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Мейнфрейм"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Произволен достъп"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Мрачно съоръжение"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Чертеж на съоръжение"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Негатив на съоръжение"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Скицирано съоръжение"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"Ултра виолетово"
 	{
@@ -2923,7 +3183,7 @@
 	"Тиня"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"Розова DDPAT"
 	{
@@ -3188,7 +3448,7 @@
 	"Захаросана ябълка"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Подземна вода"
 	{
