--- a/addons/sourcemod/configs/weapons/weapons_finnish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_finnish.cfg
@@ -1,31 +1,116 @@
 "Skins"
 {
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
 	"Night Stripe"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"Jumalan silmä"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
 	}
-	"Snek-9"
+	"Kärmes-9"
 	{
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"Selviytyjä"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"Ahmija"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"Voimaydin"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
@@ -35,57 +120,57 @@
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"Vetovoima"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"Muovisotilas"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"Suonet"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"Painajainen"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Warhawk"
+	"Sotahaukka"
 	{
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"Merenselkä"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"Hälytys"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"Revitty"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
 	}
-	"Eco"
+	"Säästö"
 	{
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"Keltainen virtaus"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"Neonkiitäjä"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -174,6 +259,11 @@
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"Ziggy"
 	{
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"Pitkät valot"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Nitro"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Jarruvalo"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Vikavalo"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Turvaverkko"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Sweeper"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Converter"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Liukuma"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Ruostepinta"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Raparoiske"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Häivytys"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Käsijarru"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino Primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Nahkaverhoilu"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Turbovaihde"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Ohjauspaneeli"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Kauko-ohjaus"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Kylmäfuusio"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Ydinpuutarha"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Akheron"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Ydinvuoto"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Lämmönvaihdin"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Kara"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Jäähdyte"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Bulkhead"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Emolevy"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Apusuoritin"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Mainframe"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Välimuisti"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Facility Dark"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Facility Draft"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Facility Negative"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Pohjapiirros"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"Ultravioletti"
 	{
@@ -2923,7 +3183,7 @@
 	"Muta"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"Pinkki DDPAT"
 	{
@@ -3188,7 +3448,7 @@
 	"Karamelliomena"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Pohjavesi"
 	{
