--- a/addons/sourcemod/configs/weapons/weapons_french.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_french.cfg
@@ -1,36 +1,121 @@
 "Skins"
 {
-	"Night Stripe"
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
+	"Rayures nocturnes"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"Œil d'Athéna"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
 	}
-	"Snek-9"
+	"Régalec-9"
 	{
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"Survivaliste"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"Glouton"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"Transformateur électrique"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
 	}
-	"PAW"
+	"PATTE"
 	{
 		"index"		"718"
 		"classes"	"weapon_awp;"
@@ -40,17 +125,17 @@
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"Soldat de plomb"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"Veines"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"Cauchemar"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
@@ -60,32 +145,32 @@
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"Hauturier"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"Code rouge"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"Lambeaux"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
 	}
-	"Eco"
+	"Éco"
 	{
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"Sillage d'ambre"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"Coureur lumineux"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -174,6 +259,11 @@
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"Ziggy"
 	{
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"Phare"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Nitro"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Feu de freinage"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Révision moteur"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Filet de protection"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Balayeur"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Transducteur"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Dérive"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Aspect rouillé"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Dirt Drop"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Dégradé"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Frein à main"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Vélin"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Duo turbo"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Panneau de contrôle"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Contrôle à distance"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Fusion froide"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Jardin nucléaire"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Achéron"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Réacteur en fusion"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Échangeur"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Mandrin"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Réfrigérant"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Cloison"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Carte mère"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Coprocesseur"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Unité centrale"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Mémoire vive"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Complexe sombre"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Ébauche de complexe"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Complexe en négatif"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Plan de complexe"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"Ultraviolet"
 	{
@@ -2923,7 +3183,7 @@
 	"Bourbier"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"Rose numérique"
 	{
@@ -3188,7 +3448,7 @@
 	"Pomme d'amour"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Groundwater"
 	{
