--- a/addons/sourcemod/configs/weapons/weapons_korean.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_korean.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
 	"Night Stripe"
 	{
 		"index"		"735"
@@ -90,107 +175,112 @@
 		"index"		"707"
 		"classes"	"weapon_ak47;"
 	}
-	"null"
+	"Oxide Blaze"
 	{
 		"index"		"706"
 		"classes"	"weapon_xm1014;"
 	}
-	"null"
+	"Cortex"
 	{
 		"index"		"705"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"null"
+	"Arctic Wolf"
 	{
 		"index"		"704"
 		"classes"	"weapon_ump45;"
 	}
-	"null"
+	"SWAG-7"
 	{
 		"index"		"703"
 		"classes"	"weapon_mag7;"
 	}
-	"null"
+	"Aloha"
 	{
 		"index"		"702"
 		"classes"	"weapon_sg556;"
 	}
-	"null"
+	"Grip"
 	{
 		"index"		"701"
 		"classes"	"weapon_revolver;"
 	}
-	"null"
+	"Urban Hazard"
 	{
 		"index"		"700"
 		"classes"	"weapon_hkp2000;"
 	}
-	"null"
+	"Wild Six"
 	{
 		"index"		"699"
 		"classes"	"weapon_nova;"
 	}
-	"null"
+	"Lionfish"
 	{
 		"index"		"698"
 		"classes"	"weapon_negev;"
 	}
-	"null"
+	"Black Sand"
 	{
 		"index"		"697"
 		"classes"	"weapon_mp9;"
 	}
-	"null"
+	"Bloodsport"
 	{
 		"index"		"696"
 		"classes"	"weapon_mp7;"
 	}
-	"null"
+	"Neo-Noir"
 	{
 		"index"		"695"
 		"classes"	"weapon_m4a1;"
 	}
-	"null"
+	"Moonrise"
 	{
 		"index"		"694"
 		"classes"	"weapon_glock;"
 	}
-	"null"
+	"Flame Test"
 	{
 		"index"		"693"
 		"classes"	"weapon_fiveseven;"
 	}
-	"null"
+	"Night Riot"
 	{
 		"index"		"692"
 		"classes"	"weapon_bizon;"
 	}
-	"null"
+	"Mortis"
 	{
 		"index"		"691"
 		"classes"	"weapon_awp;"
 	}
-	"null"
+	"Stymphalian"
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
 	}
-	"null"
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Ziggy"
 	{
 		"index"		"689"
 		"classes"	"weapon_xm1014;"
 	}
-	"null"
+	"Exposure"
 	{
 		"index"		"688"
 		"classes"	"weapon_ump45;"
 	}
-	"null"
+	"Tacticat"
 	{
 		"index"		"687"
 		"classes"	"weapon_cz75a;"
 	}
-	"null"
+	"Phantom"
 	{
 		"index"		"686"
 		"classes"	"weapon_sg556;"
@@ -200,7 +290,7 @@
 		"index"		"685"
 		"classes"	"weapon_scar20;"
 	}
-	"null"
+	"Cracked Opal"
 	{
 		"index"		"684"
 		"classes"	"weapon_tec9;"
@@ -215,17 +305,17 @@
 		"index"		"682"
 		"classes"	"weapon_mac10;"
 	}
-	"null"
+	"Leaded Glass"
 	{
 		"index"		"681"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"null"
+	"Off World"
 	{
 		"index"		"680"
 		"classes"	"weapon_glock;"
 	}
-	"null"
+	"Goo"
 	{
 		"index"		"679"
 		"classes"	"weapon_mp9;"
@@ -235,27 +325,27 @@
 		"index"		"678"
 		"classes"	"weapon_p250;"
 	}
-	"null"
+	"Hunter"
 	{
 		"index"		"677"
 		"classes"	"weapon_g3sg1;"
 	}
-	"null"
+	"High Roller"
 	{
 		"index"		"676"
 		"classes"	"weapon_bizon;"
 	}
-	"null"
+	"The Empress"
 	{
 		"index"		"675"
 		"classes"	"weapon_ak47;"
 	}
-	"null"
+	"Triqua"
 	{
 		"index"		"674"
 		"classes"	"weapon_aug;"
 	}
-	"null"
+	"Morris"
 	{
 		"index"		"673"
 		"classes"	"weapon_sawedoff;"
@@ -390,22 +480,22 @@
 		"index"		"647"
 		"classes"	"weapon_galilar;"
 	}
-	"null"
+	"Capillary"
 	{
 		"index"		"646"
 		"classes"	"weapon_fiveseven;"
 	}
-	"null"
+	"Oxide Blaze"
 	{
 		"index"		"645"
 		"classes"	"weapon_deagle;"
 	}
-	"null"
+	"Decimator"
 	{
 		"index"		"644"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"null"
+	"Xiangliu"
 	{
 		"index"		"643"
 		"classes"	"weapon_cz75a;"
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"High Beam"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"니트로"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Brake Light"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Check Engine"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Safety Net"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Sweeper"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Converter"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Slide"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"녹슬음"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Dirt Drop"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Fade"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Hand Brake"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino Primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Calf Skin"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Twin Turbo"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Control Panel"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Remote Control"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Cold Fusion"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Nuclear Garden"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Acheron"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Core Breach"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Exchanger"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Mandrel"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Coolant"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Bulkhead"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Motherboard"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Co-Processor"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Mainframe"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Random Access"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Facility Dark"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Facility Draft"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Facility Negative"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Facility Sketch"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"자외선"
 	{
@@ -2923,7 +3183,7 @@
 	"진흙탕"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"분홍색 디지털 위장 무늬"
 	{
@@ -3188,7 +3448,7 @@
 	"사과 사탕"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"지하수"
 	{
