--- a/addons/sourcemod/configs/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese.cfg
@@ -1,91 +1,176 @@
 "Skins"
 {
-	"Night Stripe"
+	"闪回"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"破铜烂铁"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"危险距离"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"黑砂"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"下不为例"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"销声"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"镁元素"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"磷光体"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"灼木"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"锈蚀烈焰"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"信号灯"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"净化者"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"机械工业"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"中度威胁"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"黑色魅影"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"动量"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"二西莫夫"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
+	"夜色"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"雅典娜之眼"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
 	}
-	"Snek-9"
+	"蛇-9"
 	{
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"生存主义者"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"吞噬"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"权力之心"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
 	}
-	"PAW"
+	"猫猫狗狗"
 	{
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"牵引力"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"玩具士兵"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"毛细血管"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"梦魇"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Warhawk"
+	"战鹰"
 	{
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"公海"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"红色代号"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"碎片"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
 	}
-	"Eco"
+	"经济"
 	{
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"琥珀冲流"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"霓虹骑士"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -174,6 +259,11 @@
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"小白鼠"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"五彩斑驳"
 	{
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"远光灯"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"氮化处理"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"刹车灯"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"引擎故障灯"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"安全网"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"扫频仪"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"变频器"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"滑移"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"外表生锈"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"越野"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"渐变之色"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"手刹"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"意式拉力"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"葡萄酒"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"小牛皮"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"双涡轮"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"控制台"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"遥控"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"冰核聚变"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"核子花园"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"冥界之河"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"核芯破裂"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"交换机"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"芯轴"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"冷却剂"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"舱壁"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"主板"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"协处理器"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"主机"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"随机存取"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"设施系列·深色图"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"设施系列·草图"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"设施系列·底片图"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"设施系列·速写图"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"致命紫罗兰"
 	{
@@ -2923,7 +3183,7 @@
 	"泥地杀手"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"粉红 DDPAT"
 	{
@@ -3188,7 +3448,7 @@
 	"红苹果"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"地下水"
 	{
