--- a/addons/sourcemod/configs/weapons/weapons_spanish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_spanish.cfg
@@ -1,31 +1,116 @@
 "Skins"
 {
-	"Night Stripe"
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
+	"Franja nocturna"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"Ojo de Atenea"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
 	}
-	"Snek-9"
+	"Serpientec-9"
 	{
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"Survivalista"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"Devoradora"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"Núcleo de energía"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
@@ -35,42 +120,42 @@
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"Agarre"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"Soldado de juguete"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"Capilares"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"Pesadilla"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Warhawk"
+	"Halcón de guerra"
 	{
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"Alta mar"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"Código rojo"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"Jirones"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
@@ -80,12 +165,12 @@
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"Estela ámbar"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"Piloto de neón"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -155,7 +240,7 @@
 		"index"		"694"
 		"classes"	"weapon_glock;"
 	}
-	"Prueba de fuego"
+	"Ensayo a la llama"
 	{
 		"index"		"693"
 		"classes"	"weapon_fiveseven;"
@@ -174,6 +259,11 @@
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"Ziggy"
 	{
@@ -660,7 +750,7 @@
 		"index"		"588"
 		"classes"	"weapon_m4a1;"
 	}
-	"Mecaindustrias"
+	"Industria mecánica"
 	{
 		"index"		"587"
 		"classes"	"weapon_m4a1_silencer;"
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"Luces largas"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Nitro"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Luz de freno"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Testigo de motor"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Red de seguridad"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Barrido"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Convertidor"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Deslizamiento"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Capa de herrumbre"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Caída de tierra"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Desteñido"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Freno de mano"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino Primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Piel de becerro"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Twin turbo"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Panel de control"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Control remoto"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Fusión fría"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Jardín nuclear"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Aqueronte"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Brecha en el núcleo"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Intercambiador"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Mandril"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Refrigerante"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Mamparo"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Placa base"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Coprocesador"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Ordenador central"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Acceso aleatorio"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Instalación oscura"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Borrador de instalación"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Instalación negativa"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Esquema de instalación"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"Ultravioleta"
 	{
@@ -2420,12 +2680,12 @@
 		"index"		"232"
 		"classes"	"weapon_deagle;weapon_scar20;"
 	}
-	"DDPAT de cobalto"
+	"DDPAT cobalto"
 	{
 		"index"		"231"
 		"classes"	"weapon_deagle;"
 	}
-	"DDPAT de acero"
+	"DDPAT acero"
 	{
 		"index"		"230"
 		"classes"	"weapon_glock;weapon_p250;"
@@ -2565,7 +2825,7 @@
 		"index"		"203"
 		"classes"	"weapon_bizon;"
 	}
-	"DDPAT de Jungla"
+	"DDPAT jungla"
 	{
 		"index"		"202"
 		"classes"	"weapon_m249;"
@@ -2645,7 +2905,7 @@
 		"index"		"187"
 		"classes"	"weapon_m4a1;"
 	}
-	"Aerosol de olas"
+	"Espray de olas"
 	{
 		"index"		"186"
 		"classes"	"weapon_sg556;"
@@ -2835,17 +3095,17 @@
 		"index"		"135"
 		"classes"	"weapon_xm1014;"
 	}
-	"Aerosol de arena"
+	"Espray de arena"
 	{
 		"index"		"124"
 		"classes"	"weapon_p90;"
 	}
-	"Aerosol de jungla"
+	"Espray de jungla"
 	{
 		"index"		"122"
 		"classes"	"weapon_ak47;"
 	}
-	"Aerosol de salvia"
+	"Espray de salvia"
 	{
 		"index"		"119"
 		"classes"	"weapon_galilar;weapon_sawedoff;"
@@ -2923,7 +3183,7 @@
 	"Embarrada"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"DDPAT rosa"
 	{
@@ -3110,7 +3370,7 @@
 		"index"		"25"
 		"classes"	"weapon_bizon;weapon_nova;weapon_usp_silencer;"
 	}
-	"Aerosol de contraste"
+	"Espray de contraste"
 	{
 		"index"		"22"
 		"classes"	"weapon_famas;weapon_m249;"
@@ -3180,7 +3440,7 @@
 		"index"		"6"
 		"classes"	"weapon_g3sg1;"
 	}
-	"DDPAT de bosque"
+	"DDPAT bosque"
 	{
 		"index"		"5"
 		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
@@ -3188,7 +3448,7 @@
 	"Manzana de caramelo"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Agua subterránea"
 	{
