--- a/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
@@ -1,91 +1,176 @@
 "Skins"
 {
-	"Night Stripe"
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
+	"Нічна смужка"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"Око Афіни"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
 	}
-	"Snek-9"
+	"Змія-9"
 	{
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"Виживальник"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"Пожирач"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"Енергогенератор"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
 	}
-	"PAW"
+	"ЛАПА"
 	{
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"Тяга"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"Іграшковий солдатик"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"Капіляр"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"Кошмар"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Warhawk"
+	"Яструб"
 	{
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"Відкрите море"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"Червоний код"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"Шмаття"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
 	}
-	"Eco"
+	"Еко"
 	{
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"Бурштиновий потік"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"Неоновий гонщик"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -174,6 +259,11 @@
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"Зіґґі"
 	{
@@ -270,7 +360,7 @@
 		"index"		"671"
 		"classes"	"weapon_tec9;"
 	}
-	"Мертва голова"
+	"Голова смерті"
 	{
 		"index"		"670"
 		"classes"	"weapon_ssg08;"
@@ -895,6 +985,176 @@
 		"index"		"541"
 		"classes"	"weapon_aug;"
 	}
+	"Дальнє світло"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Нітро"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Стоп-сигнал"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Несправність"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Захисна сітка"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Прибиральник"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Конвертер"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Ковзання"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Прошарок іржі"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Брудне випадіння"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Градієнт"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Ручне гальмо"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Інтеграл"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Першокласне вино"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Теляча шкіра"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Подвійне турбо"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Панель керування"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Віддалене керування"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Холодний сплав"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Ядерний сад"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Ахерон"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Витік реактора"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Обмінник"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Осердя"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Охолоджувач"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Перемичка"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Материнська плата"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Співпроцесор"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Мейнфрейм"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Випадковий доступ"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Фабрична пітьма"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Чернетка об’єкта"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Об’єкт у негативі"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Ескіз об’єкта"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
+	}
 	"Ультрафіолет"
 	{
 		"index"		"621"
@@ -1160,7 +1420,7 @@
 		"index"		"491"
 		"classes"	"weapon_elite;"
 	}
-	"Фронт у мглі"
+	"Фронт в імлі"
 	{
 		"index"		"490"
 		"classes"	"weapon_ak47;"
@@ -1215,7 +1475,7 @@
 		"index"		"480"
 		"classes"	"weapon_m4a1;"
 	}
-	"Бунзеновський паяльник"
+	"Пальник Бунзена"
 	{
 		"index"		"479"
 		"classes"	"weapon_glock;"
@@ -1410,7 +1670,7 @@
 		"index"		"440"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Аід"
+	"Аїд"
 	{
 		"index"		"439"
 		"classes"	"weapon_tec9;"
@@ -2923,7 +3183,7 @@
 	"Бруд"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"Пікс. камуфляж «Фуксія»"
 	{
@@ -3188,7 +3448,7 @@
 	"Карамельне яблуко"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Ґрунтові води"
 	{
