--- a/addons/sourcemod/configs/weapons/weapons_vietnamese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_vietnamese.cfg
@@ -85,181 +85,6 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
-	"Lab Rats"
-	{
-		"index"		"800"
-		"classes"	"weapon_mp5sd;"
-	}
-	"High Beam"
-	{
-		"index"		"799"
-		"classes"	"weapon_glock;"
-	}
-	"Nitro"
-	{
-		"index"		"798"
-		"classes"	"weapon_revolver;"
-	}
-	"Brake Light"
-	{
-		"index"		"797"
-		"classes"	"weapon_sawedoff;"
-	}
-	"Check Engine"
-	{
-		"index"		"796"
-		"classes"	"weapon_usp_silencer;"
-	}
-	"Safety Net"
-	{
-		"index"		"795"
-		"classes"	"weapon_ak47;"
-	}
-	"Sweeper"
-	{
-		"index"		"794"
-		"classes"	"weapon_aug;"
-	}
-	"Converter"
-	{
-		"index"		"793"
-		"classes"	"weapon_m4a1;"
-	}
-	"Slide"
-	{
-		"index"		"755"
-		"classes"	"weapon_mp9;"
-	}
-	"Rust Coat"
-	{
-		"index"		"754"
-		"classes"	"weapon_mag7;"
-	}
-	"Dirt Drop"
-	{
-		"index"		"753"
-		"classes"	"weapon_mp5sd;"
-	}
-	"Fade"
-	{
-		"index"		"752"
-		"classes"	"weapon_mp7;"
-	}
-	"Hand Brake"
-	{
-		"index"		"751"
-		"classes"	"weapon_ssg08;"
-	}
-	"Integrale"
-	{
-		"index"		"750"
-		"classes"	"weapon_sg556;"
-	}
-	"Vino Primo"
-	{
-		"index"		"749"
-		"classes"	"weapon_p250;"
-	}
-	"Calf Skin"
-	{
-		"index"		"748"
-		"classes"	"weapon_mac10;"
-	}
-	"Twin Turbo"
-	{
-		"index"		"747"
-		"classes"	"weapon_elite;"
-	}
-	"Control Panel"
-	{
-		"index"		"792"
-		"classes"	"weapon_m4a1_silencer;"
-	}
-	"Remote Control"
-	{
-		"index"		"791"
-		"classes"	"weapon_tec9;"
-	}
-	"Cold Fusion"
-	{
-		"index"		"790"
-		"classes"	"weapon_galilar;"
-	}
-	"Nuclear Garden"
-	{
-		"index"		"789"
-		"classes"	"weapon_glock;"
-	}
-	"Acheron"
-	{
-		"index"		"788"
-		"classes"	"weapon_awp;"
-	}
-	"Core Breach"
-	{
-		"index"		"787"
-		"classes"	"weapon_mag7;"
-	}
-	"Exchanger"
-	{
-		"index"		"786"
-		"classes"	"weapon_p250;"
-	}
-	"Mandrel"
-	{
-		"index"		"785"
-		"classes"	"weapon_nova;"
-	}
-	"Coolant"
-	{
-		"index"		"784"
-		"classes"	"weapon_fiveseven;"
-	}
-	"Bulkhead"
-	{
-		"index"		"783"
-		"classes"	"weapon_negev;"
-	}
-	"Motherboard"
-	{
-		"index"		"782"
-		"classes"	"weapon_mp7;"
-	}
-	"Co-Processor"
-	{
-		"index"		"781"
-		"classes"	"weapon_mp5sd;"
-	}
-	"Mainframe"
-	{
-		"index"		"780"
-		"classes"	"weapon_m4a1;"
-	}
-	"Random Access"
-	{
-		"index"		"779"
-		"classes"	"weapon_aug;"
-	}
-	"Facility Dark"
-	{
-		"index"		"778"
-		"classes"	"weapon_ump45;"
-	}
-	"Facility Draft"
-	{
-		"index"		"777"
-		"classes"	"weapon_p250;"
-	}
-	"Facility Negative"
-	{
-		"index"		"776"
-		"classes"	"weapon_p90;"
-	}
-	"Facility Sketch"
-	{
-		"index"		"775"
-		"classes"	"weapon_bizon;"
-	}
 	"Night Stripe"
 	{
 		"index"		"735"
@@ -435,6 +260,11 @@
 		"index"		"690"
 		"classes"	"weapon_aug;"
 	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
+	}
 	"Ziggy"
 	{
 		"index"		"689"
@@ -465,7 +295,7 @@
 		"index"		"684"
 		"classes"	"weapon_tec9;"
 	}
-	"Llama Cannon"
+	"LLama Cannon"
 	{
 		"index"		"683"
 		"classes"	"weapon_revolver;"
@@ -995,14 +825,9 @@
 		"index"		"573"
 		"classes"	"weapon_bayonet;"
 	}
-	"Gamma Doppler (Phase 1)"
+	"Gamma Doppler (Phase 4)"
 	{
-		"index"		"569"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
-	}
-	"Gamma Doppler (Phase 2)"
-	{
-		"index"		"570"
+		"index"		"572"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
 	}
 	"Gamma Doppler (Phase 3)"
@@ -1010,9 +835,14 @@
 		"index"		"571"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
 	}
-	"Gamma Doppler (Phase 4)"
+	"Gamma Doppler (Phase 2)"
 	{
-		"index"		"572"
+		"index"		"570"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+	}
+	"Gamma Doppler (Phase 1)"
+	{
+		"index"		"569"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
 	}
 	"Gamma Doppler (Emerald)"
@@ -1095,7 +925,7 @@
 		"index"		"553"
 		"classes"	"weapon_sg556;"
 	}
-	"Fubar"
+	"FUBAR"
 	{
 		"index"		"552"
 		"classes"	"weapon_sawedoff;"
@@ -1155,6 +985,176 @@
 		"index"		"541"
 		"classes"	"weapon_aug;"
 	}
+	"High Beam"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Nitro"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Brake Light"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Check Engine"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Safety Net"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Sweeper"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Converter"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Slide"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Rust Coat"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Dirt Drop"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Fade"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Hand Brake"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino Primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Calf Skin"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Twin Turbo"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Control Panel"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Remote Control"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Cold Fusion"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Nuclear Garden"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Acheron"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Core Breach"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Exchanger"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Mandrel"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Coolant"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Bulkhead"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Motherboard"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Co-Processor"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Mainframe"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Random Access"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Facility Dark"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Facility Draft"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Facility Negative"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Facility Sketch"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
+	}
 	"Ultraviolet"
 	{
 		"index"		"621"
@@ -1164,6 +1164,21 @@
 	{
 		"index"		"620"
 		"classes"	"weapon_knife_tactical;"
+	}
+	"Doppler (Sapphire)"
+	{
+		"index"		"619"
+		"classes"	"weapon_knife_butterfly;weapon_knife_push;"
+	}
+	"Doppler (Phase 2)"
+	{
+		"index"		"618"
+		"classes"	"weapon_knife_butterfly;weapon_knife_push;"
+	}
+	"Doppler (Black Pearl)"
+	{
+		"index"		"617"
+		"classes"	"weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Lead Conduit"
 	{
@@ -1745,9 +1760,14 @@
 		"index"		"422"
 		"classes"	"weapon_ak47;"
 	}
-	"Doppler (Phase 1)"
+	"Doppler (Phase 4)"
 	{
-		"index"		"418"
+		"index"		"421"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+	}
+	"Doppler (Phase 3)"
+	{
+		"index"		"420"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler (Phase 2)"
@@ -1755,34 +1775,9 @@
 		"index"		"419"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
 	}
-	"Doppler (Phase 2)"
+	"Doppler (Phase 1)"
 	{
-		"index"		"618"
-		"classes"	"weapon_knife_butterfly;weapon_knife_push;"
-	}
-	"Doppler (Phase 3)"
-	{
-		"index"		"420"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
-	}
-	"Doppler (Phase 4)"
-	{
-		"index"		"421"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
-	}
-	"Doppler (Sapphire)"
-	{
-		"index"		"416"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
-	}
-	"Doppler (Sapphire)"
-	{
-		"index"		"619"
-		"classes"	"weapon_knife_butterfly;weapon_knife_push;"
-	}
-	"Doppler (Ruby)"
-	{
-		"index"		"415"
+		"index"		"418"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler (Black Pearl)"
@@ -1790,10 +1785,15 @@
 		"index"		"417"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
 	}
-	"Doppler (Black Pearl)"
+	"Doppler (Sapphire)"
 	{
-		"index"		"617"
-		"classes"	"weapon_knife_butterfly;weapon_knife_push;"
+		"index"		"416"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+	}
+	"Doppler (Ruby)"
+	{
+		"index"		"415"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Rust Coat"
 	{
@@ -1855,7 +1855,7 @@
 		"index"		"401"
 		"classes"	"weapon_m249;"
 	}
-	"龍王 (Dragon King)"
+	"龍王 (Long Vương)"
 	{
 		"index"		"400"
 		"classes"	"weapon_m4a1;"
@@ -2495,7 +2495,7 @@
 		"index"		"270"
 		"classes"	"weapon_cz75a;"
 	}
-	"The Fuschia Is Now"
+	"The Fuchsia Is Now"
 	{
 		"index"		"269"
 		"classes"	"weapon_cz75a;"
@@ -2560,7 +2560,7 @@
 		"index"		"257"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"The Kraken"
+	"Thủy quái Kraken"
 	{
 		"index"		"256"
 		"classes"	"weapon_sawedoff;"
@@ -2625,7 +2625,7 @@
 		"index"		"244"
 		"classes"	"weapon_famas;weapon_p90;"
 	}
-	"Gator Mesh"
+	"Lưới cá sấu"
 	{
 		"index"		"243"
 		"classes"	"weapon_m249;weapon_sg556;"
@@ -3170,7 +3170,7 @@
 		"index"		"95"
 		"classes"	"weapon_xm1014;weapon_hkp2000;"
 	}
-	"Caramel"
+	"Caramen"
 	{
 		"index"		"93"
 		"classes"	"weapon_ump45;"
