--- a/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
@@ -1,91 +1,176 @@
 "Skins"
 {
-	"Night Stripe"
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
+	"Listra Noturna"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"Olho de Atena"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
 	}
-	"Snek-9"
+	"Vene-9"
 	{
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"Sobrevivente"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"Devoradora"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"Núcleo Energético"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
 	}
-	"PAW"
+	"P.A.T.A."
 	{
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"Tração"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"Soldado de Brinquedo"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"Capilar"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"Pesadelo"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Warhawk"
+	"Gavião de Guerra"
 	{
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"Alto Mar"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"Código Vermelho"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"Ranhura"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
 	}
-	"Eco"
+	"Ecológica"
 	{
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"Turbilhão de Âmbar"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"Piloto Neon"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -174,6 +259,11 @@
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"Ziggy"
 	{
@@ -335,7 +425,7 @@
 		"index"		"658"
 		"classes"	"weapon_elite;"
 	}
-	"Projeto"
+	"Planta Arquitetônica"
 	{
 		"index"		"657"
 		"classes"	"weapon_usp_silencer;"
@@ -410,7 +500,7 @@
 		"index"		"643"
 		"classes"	"weapon_cz75a;"
 	}
-	"Projeto"
+	"Planta Arquitetônica"
 	{
 		"index"		"642"
 		"classes"	"weapon_scar20;"
@@ -630,7 +720,7 @@
 		"index"		"594"
 		"classes"	"weapon_bizon;"
 	}
-	"Fogoso"
+	"Fogosa"
 	{
 		"index"		"593"
 		"classes"	"weapon_p90;"
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"High Beam"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Nitro"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Brake Light"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Check Engine"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Grade de Proteção"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Sweeper"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Conversor"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Slide"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Revestimento Enferrujado"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"BMX"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Degradê"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Freio de Mão"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino Primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Couro de Bezerro"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Twin Turbo"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Painel de Controle"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Controle Remoto"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Fusão a Frio"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Jardim Radioativo"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Aqueronte"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Core Breach"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Trocador"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Mandril"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Resfriador"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Boquilha"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Placa-mãe"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Coprocessador"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Mainframe"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Acesso Aleatório"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Facility Dark"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Facility Draft"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Facility Negative"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Facility Sketch"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"Ultravioleta"
 	{
@@ -2923,7 +3183,7 @@
 	"Lama"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"Camuflagem Digital — Rosa"
 	{
@@ -3188,7 +3448,7 @@
 	"Maçã do Amor"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Água de Pântano"
 	{
