--- a/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
@@ -1,91 +1,176 @@
 "Skins"
 {
-	"Night Stripe"
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
+	"Éji Sáv"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"Athéné Szeme"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
 	}
-	"Snek-9"
+	"Kígyó"
 	{
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"Túlélő"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"Mohó"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"Akksi"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
 	}
-	"PAW"
+	"Mancs"
 	{
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"Tapadás"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"Játék Katona"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"Hajszálér"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"Rémálom"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Warhawk"
+	"Harci Sólyom"
 	{
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"Nyílt Tenger"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"Vörös Riasztás"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"Foszlány"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
 	}
-	"Eco"
+	"Öko"
 	{
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"Borostyán Suhanás"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"Neonlovas"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -174,6 +259,11 @@
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"Cikkcakk"
 	{
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"Fényszóró"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Nitro"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Féklámpa"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Motorellenőrzés"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Biztonsági Háló"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Söprögető"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Átalakító"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Farolás"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Rozsdabevonat"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Sárfoltok"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Halványulás"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Kézifék"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino Primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Borjúbőr"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Ikerturbó"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Vezérlőpult"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Távvezérlés"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Hidegfúzió"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Nukleáris Kert"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Akherón"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Maghasadás"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Hőcserélő"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Vezetőtüske"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Hűtőfolyadék"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Válaszfal"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Alaplap"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Társprocesszor"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Nagyszámítógép"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Véletlen Elérés"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Sötét Tervek"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Létesítményvázlat"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Tervrajz-negatív"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Létesítményterv"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"Ultraibolya"
 	{
@@ -2923,7 +3183,7 @@
 	"Saras"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"Rózsaszín DDPAT"
 	{
@@ -3188,7 +3448,7 @@
 	"Candy Apple"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Talajvíz"
 	{
