--- a/addons/sourcemod/configs/weapons/weapons_italian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_italian.cfg
@@ -1,11 +1,96 @@
 "Skins"
 {
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
 	"Night Stripe"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"Occhio di Atena"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
@@ -15,7 +100,7 @@
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"Survivalista"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
@@ -25,7 +110,7 @@
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"Scarica elettrica"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
@@ -35,12 +120,12 @@
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"Trazione"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"Soldatino"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
@@ -50,7 +135,7 @@
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"Incubo"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
@@ -65,7 +150,7 @@
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"Codice rosso"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
@@ -85,7 +170,7 @@
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"Centauro al neon"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -125,7 +210,7 @@
 		"index"		"700"
 		"classes"	"weapon_hkp2000;"
 	}
-	"null"
+	"Selvaggio 6"
 	{
 		"index"		"699"
 		"classes"	"weapon_nova;"
@@ -174,6 +259,11 @@
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"Ziggy"
 	{
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"Abbagliante"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Nitro"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Brake Light"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Spia del motore"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Rete di sicurezza"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Spazzatrice"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Convertitore"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Carrello"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Strato di ruggine"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Parafango"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Dissolvenza"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Freno a mano"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino Primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Pelle di vitello"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Bi-turbo"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Pannello di controllo"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Controllo remoto"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Fusione fredda"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Giardino nucleare"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Acheronte"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Breccia nel nucleo"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Scambiatore"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Mandrino"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Refrigerante"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Bulkhead"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Scheda madre"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Coprocessore"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Mainframe"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Accesso casuale"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Facility Dark"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Facility Draft"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Facility Negative"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Facility Sketch"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"Ultravioletto"
 	{
@@ -2923,7 +3183,7 @@
 	"Fango"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"DDPAT rosa"
 	{
@@ -3188,7 +3448,7 @@
 	"Mela caramellata"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Falda acquifera"
 	{
