--- a/addons/sourcemod/configs/weapons/weapons_norwegian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_norwegian.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
 	"Night Stripe"
 	{
 		"index"		"735"
@@ -174,6 +259,11 @@
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"Ziggy"
 	{
@@ -510,7 +600,7 @@
 		"index"		"623"
 		"classes"	"weapon_glock;"
 	}
-	"null"
+	"Polymer"
 	{
 		"index"		"622"
 		"classes"	"weapon_cz75a;"
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"High Beam"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Nitro"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Brake Light"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Check Engine"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Safety Net"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Sweeper"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Converter"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Slide"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Rust Coat"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Dirt Drop"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Fade"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Hand Brake"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino Primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Calf Skin"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Twin Turbo"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Control Panel"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Remote Control"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Cold Fusion"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Nuclear Garden"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Acheron"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Core Breach"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Exchanger"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Mandrel"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Coolant"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Bulkhead"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Motherboard"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Co-Processor"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Mainframe"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Random Access"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Facility Dark"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Facility Draft"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Facility Negative"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Facility Sketch"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"Ultraviolet"
 	{
@@ -2923,7 +3183,7 @@
 	"Mudder"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"Pink DDPAT"
 	{
@@ -3188,7 +3448,7 @@
 	"Candy Apple"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Groundwater"
 	{
