--- a/addons/sourcemod/configs/weapons/weapons_russian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_russian.cfg
@@ -1,91 +1,176 @@
 "Skins"
 {
-	"Night Stripe"
+	"Взгляд в прошлое"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Ветеран"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Близкая опасность"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Чёрный песок"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Ворон"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Полная труба"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Магний"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Фосфор"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Горелое дерево"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Оксидное пламя"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Сигнал"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Падальщик"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Механо-пушка"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Скромная угроза"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Неонуар"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Динамика"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Азимов"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
+	"Ночная полоса"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"Глаз Афины"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
 	}
-	"Snek-9"
+	"Змейк-9"
 	{
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"Выживший"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"Пожиратель"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"Генератор"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
 	}
-	"PAW"
+	"ЛАПКИ"
 	{
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"Сцепление"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"Солдатик"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"Капилляры"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"Ночной кошмар"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Warhawk"
+	"Ястреб"
 	{
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"Морские просторы"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"Код красный"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"Клочки"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
 	}
-	"Eco"
+	"Эко"
 	{
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"Янтарный шквал"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"Неоновый гонщик"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -174,6 +259,11 @@
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"Подопытные крысы"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"Зигги"
 	{
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"Дальний свет"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Нитро"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Стоп-сигнал"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Неисправность"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Защитная сетка"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Дворник"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Преобразователь"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Занос"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Пыльник"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Брызговик"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Градиент"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Ручной тормоз"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Лучшее вино"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Телячья кожа"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Турбодвойники"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Панель управления"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Удалённый доступ"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Холодный синтез"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Ядерный сад"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Ахерон"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Разрушение ядра"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Обменник"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Сердечник"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Хладагент"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Изоляция"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Материнская плата"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Сопроцессор"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Центральный процессор"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Оперативная память"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Чертёж-гравировка"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Чертёж-планировка"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Чертёж-негатив"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Чертёж объекта"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"Ультрафиолет"
 	{
@@ -2923,7 +3183,7 @@
 	"Осадок"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"Пиксельный камуфляж «Розовый»"
 	{
@@ -3188,7 +3448,7 @@
 	"Карамельное яблоко"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Грунтовая вода"
 	{
