--- a/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
 	"Night Stripe"
 	{
 		"index"		"735"
@@ -90,90 +175,95 @@
 		"index"		"707"
 		"classes"	"weapon_ak47;"
 	}
-	"null"
+	"Oxide Blaze"
 	{
 		"index"		"706"
 		"classes"	"weapon_xm1014;"
 	}
-	"null"
+	"Cortex"
 	{
 		"index"		"705"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"null"
+	"Arctic Wolf"
 	{
 		"index"		"704"
 		"classes"	"weapon_ump45;"
 	}
-	"null"
+	"SWAG-7"
 	{
 		"index"		"703"
 		"classes"	"weapon_mag7;"
 	}
-	"null"
+	"Aloha"
 	{
 		"index"		"702"
 		"classes"	"weapon_sg556;"
 	}
-	"null"
+	"Grip"
 	{
 		"index"		"701"
 		"classes"	"weapon_revolver;"
 	}
-	"null"
+	"Urban Hazard"
 	{
 		"index"		"700"
 		"classes"	"weapon_hkp2000;"
 	}
-	"null"
+	"Wild Six"
 	{
 		"index"		"699"
 		"classes"	"weapon_nova;"
 	}
-	"null"
+	"Lionfish"
 	{
 		"index"		"698"
 		"classes"	"weapon_negev;"
 	}
-	"null"
+	"Black Sand"
 	{
 		"index"		"697"
 		"classes"	"weapon_mp9;"
 	}
-	"null"
+	"Bloodsport"
 	{
 		"index"		"696"
 		"classes"	"weapon_mp7;"
 	}
-	"null"
+	"Neo-Noir"
 	{
 		"index"		"695"
 		"classes"	"weapon_m4a1;"
 	}
-	"null"
+	"Moonrise"
 	{
 		"index"		"694"
 		"classes"	"weapon_glock;"
 	}
-	"null"
+	"Flame Test"
 	{
 		"index"		"693"
 		"classes"	"weapon_fiveseven;"
 	}
-	"null"
+	"Night Riot"
 	{
 		"index"		"692"
 		"classes"	"weapon_bizon;"
 	}
-	"null"
+	"Mortis"
 	{
 		"index"		"691"
 		"classes"	"weapon_awp;"
 	}
-	"null"
+	"Stymphalian"
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
+	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
 	}
 	"炫酷包裝"
 	{
@@ -515,7 +605,7 @@
 		"index"		"622"
 		"classes"	"weapon_cz75a;"
 	}
-	"null"
+	"Slipstream"
 	{
 		"index"		"616"
 		"classes"	"weapon_xm1014;"
@@ -530,7 +620,7 @@
 		"index"		"614"
 		"classes"	"weapon_tec9;"
 	}
-	"null"
+	"Triarch"
 	{
 		"index"		"613"
 		"classes"	"weapon_sg556;"
@@ -605,7 +695,7 @@
 		"index"		"599"
 		"classes"	"weapon_tec9;"
 	}
-	"null"
+	"Aerial"
 	{
 		"index"		"598"
 		"classes"	"weapon_sg556;"
@@ -675,7 +765,7 @@
 		"index"		"585"
 		"classes"	"weapon_fiveseven;"
 	}
-	"null"
+	"Phobos"
 	{
 		"index"		"584"
 		"classes"	"weapon_awp;"
@@ -685,17 +775,17 @@
 		"index"		"583"
 		"classes"	"weapon_aug;"
 	}
-	"null"
+	"Freehand"
 	{
 		"index"		"582"
 		"classes"	"weapon_knife_karambit;"
 	}
-	"null"
+	"Freehand"
 	{
 		"index"		"581"
 		"classes"	"weapon_knife_m9_bayonet;"
 	}
-	"null"
+	"Freehand"
 	{
 		"index"		"580"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;"
@@ -710,27 +800,27 @@
 		"index"		"578"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;"
 	}
-	"null"
+	"Autotronic"
 	{
 		"index"		"577"
 		"classes"	"weapon_knife_m9_bayonet;"
 	}
-	"null"
+	"Autotronic"
 	{
 		"index"		"576"
 		"classes"	"weapon_knife_karambit;"
 	}
-	"null"
+	"Autotronic"
 	{
 		"index"		"575"
 		"classes"	"weapon_knife_gut;"
 	}
-	"null"
+	"Autotronic"
 	{
 		"index"		"574"
 		"classes"	"weapon_knife_flip;"
 	}
-	"null"
+	"Autotronic"
 	{
 		"index"		"573"
 		"classes"	"weapon_bayonet;"
@@ -894,6 +984,176 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"High Beam"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"硝基"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Brake Light"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Check Engine"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Safety Net"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Sweeper"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Converter"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Slide"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"鏽衣"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Dirt Drop"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Fade"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Hand Brake"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino Primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Calf Skin"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Twin Turbo"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Control Panel"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Remote Control"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Cold Fusion"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Nuclear Garden"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Acheron"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Core Breach"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Exchanger"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Mandrel"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Coolant"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Bulkhead"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Motherboard"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Co-Processor"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Mainframe"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Random Access"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Facility Dark"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Facility Draft"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Facility Negative"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Facility Sketch"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
 	}
 	"致命紫羅蘭"
 	{
@@ -2923,7 +3183,7 @@
 	"泥地"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"數位粉紅"
 	{
@@ -3188,7 +3448,7 @@
 	"蜜糖紅蘋"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"地下水"
 	{
