--- a/addons/sourcemod/configs/weapons/weapons_turkish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_turkish.cfg
@@ -1,6 +1,96 @@
 "Skins"
 {
-	"High Beam"
+	"Flashback"
+	{
+		"index"		"817"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Fubar"
+	{
+		"index"		"816"
+		"classes"	"weapon_tec9;"
+	}
+	"Danger Close"
+	{
+		"index"		"815"
+		"classes"	"weapon_sg556;"
+	}
+	"Black Sand"
+	{
+		"index"		"814"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Nevermore"
+	{
+		"index"		"813"
+		"classes"	"weapon_p250;"
+	}
+	"Pipe Down"
+	{
+		"index"		"812"
+		"classes"	"weapon_mac10;"
+	}
+	"Magnesium"
+	{
+		"index"		"811"
+		"classes"	"weapon_m4a1;"
+	}
+	"Phosphor"
+	{
+		"index"		"810"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wood Fired"
+	{
+		"index"		"809"
+		"classes"	"weapon_nova;"
+	}
+	"Oxide Blaze"
+	{
+		"index"		"808"
+		"classes"	"weapon_glock;"
+	}
+	"Signal"
+	{
+		"index"		"807"
+		"classes"	"weapon_galilar;"
+	}
+	"Scavenger"
+	{
+		"index"		"806"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mecha Industries"
+	{
+		"index"		"805"
+		"classes"	"weapon_deagle;"
+	}
+	"Modest Threat"
+	{
+		"index"		"804"
+		"classes"	"weapon_mp9;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"803"
+		"classes"	"weapon_awp;"
+	}
+	"Momentum"
+	{
+		"index"		"802"
+		"classes"	"weapon_ump45;"
+	}
+	"Asiimov"
+	{
+		"index"		"801"
+		"classes"	"weapon_ak47;"
+	}
+	"Lab Rats"
+	{
+		"index"		"800"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Uzun Far"
 	{
 		"index"		"799"
 		"classes"	"weapon_glock;"
@@ -10,32 +100,32 @@
 		"index"		"798"
 		"classes"	"weapon_revolver;"
 	}
-	"Brake Light"
+	"Fren Lambası"
 	{
 		"index"		"797"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Check Engine"
+	"Motor Kontrol"
 	{
 		"index"		"796"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Safety Net"
+	"Emniyet Ağı"
 	{
 		"index"		"795"
 		"classes"	"weapon_ak47;"
 	}
-	"Sweeper"
+	"Tarayıcı"
 	{
 		"index"		"794"
 		"classes"	"weapon_aug;"
 	}
-	"Converter"
+	"Dönüştürücü"
 	{
 		"index"		"793"
 		"classes"	"weapon_m4a1;"
 	}
-	"Slide"
+	"Kızak"
 	{
 		"index"		"755"
 		"classes"	"weapon_mp9;"
@@ -45,17 +135,17 @@
 		"index"		"754"
 		"classes"	"weapon_mag7;"
 	}
-	"Dirt Drop"
+	"Çamurluk"
 	{
 		"index"		"753"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Fade"
+	"Solgun"
 	{
 		"index"		"752"
 		"classes"	"weapon_mp7;"
 	}
-	"Hand Brake"
+	"El Freni"
 	{
 		"index"		"751"
 		"classes"	"weapon_ssg08;"
@@ -70,32 +160,32 @@
 		"index"		"749"
 		"classes"	"weapon_p250;"
 	}
-	"Calf Skin"
+	"Dana Derisi"
 	{
 		"index"		"748"
 		"classes"	"weapon_mac10;"
 	}
-	"Twin Turbo"
+	"Çift Turbo"
 	{
 		"index"		"747"
 		"classes"	"weapon_elite;"
 	}
-	"Control Panel"
+	"Kontrol Paneli"
 	{
 		"index"		"792"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Remote Control"
+	"Uzaktan Kumanda"
 	{
 		"index"		"791"
 		"classes"	"weapon_tec9;"
 	}
-	"Cold Fusion"
+	"Soğuk Füzyon"
 	{
 		"index"		"790"
 		"classes"	"weapon_galilar;"
 	}
-	"Nuclear Garden"
+	"Nükleer Bahçe"
 	{
 		"index"		"789"
 		"classes"	"weapon_glock;"
@@ -105,12 +195,12 @@
 		"index"		"788"
 		"classes"	"weapon_awp;"
 	}
-	"Core Breach"
+	"Çekirdek Bozunması"
 	{
 		"index"		"787"
 		"classes"	"weapon_mag7;"
 	}
-	"Exchanger"
+	"Eşanjör"
 	{
 		"index"		"786"
 		"classes"	"weapon_p250;"
@@ -120,52 +210,52 @@
 		"index"		"785"
 		"classes"	"weapon_nova;"
 	}
-	"Coolant"
+	"Soğutucu"
 	{
 		"index"		"784"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Bulkhead"
+	"Bölme"
 	{
 		"index"		"783"
 		"classes"	"weapon_negev;"
 	}
-	"Motherboard"
+	"Anakart"
 	{
 		"index"		"782"
 		"classes"	"weapon_mp7;"
 	}
-	"Co-Processor"
+	"Yardımcı İşlemci"
 	{
 		"index"		"781"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Mainframe"
+	"Ana Bilgisayar"
 	{
 		"index"		"780"
 		"classes"	"weapon_m4a1;"
 	}
-	"Random Access"
+	"Rastgele Erişim"
 	{
 		"index"		"779"
 		"classes"	"weapon_aug;"
 	}
-	"Facility Dark"
+	"Karanlık Tesis"
 	{
 		"index"		"778"
 		"classes"	"weapon_ump45;"
 	}
-	"Facility Draft"
+	"Tesis Taslağı"
 	{
 		"index"		"777"
 		"classes"	"weapon_p250;"
 	}
-	"Facility Negative"
+	"Tesis Negatifi"
 	{
 		"index"		"776"
 		"classes"	"weapon_p90;"
 	}
-	"Facility Sketch"
+	"Tesis Planı"
 	{
 		"index"		"775"
 		"classes"	"weapon_bizon;"
